Full Procedure Functional
After making the following changes the system is functional from start to finish

Fixed a bug where paid classes still showed up in total due
Fixed a database bug requiring a payment ID when adding an item to the cart
Updated catalog to show full classes in red
Updated class details to show seats availability
Updated class details to hide registration buttons when class is full
Added stripes to the class catalog to make it easier to read

--- a/www/home.html
+++ b/www/home.html
@@ -190,6 +190,13 @@
     </script>
 
     <style>
+       .row-striped:nth-of-type(odd){
+         background-color: #dcdcdc;
+       }
+       .row-striped:nth-of-type(even){
+         background-color: #cccccc;
+       }
+
        .flash {
          -moz-animation: flash 1s ease-out;
          -moz-animation-iteration-count: infinite;
