--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,13 @@
     </script>
 
     <style>
+       .row-striped :nth-child(even){
+         background-color: #dcdcdc;
+       }
+       .row-striped :nth-child(odd){
+         background-color: #aaaaaa;
+       }
+
        .flash {
          -moz-animation: flash 1s ease-out;
          -moz-animation-iteration-count: infinite;
