End of Day Commit 12-26-2016
Added detail link to "My Classes"
Updated classs details to show when this account is enrolled
Added detailed status messages to "Class Details" when children in this account are enrolled
Added "Add-on" handling to "Class Details"

--- a/www/home.html
+++ b/www/home.html
@@ -161,6 +161,8 @@
          obj.action = "DROP";
          obj.reservationID = reservationID;
 
+         event.stopPropagation();
+
          $.post ( "classFunctions.php" , obj , function ( data ) {
             decode ( data );
          } );
