Revised Payment Tables
Payment tracking was moved to a new set of database tables to better accomodate half payments.
Still need to revise the rest of the checkout procedure to check for half payments and accomodate them if they are in process

--- a/www/home.html
+++ b/www/home.html
@@ -179,11 +179,12 @@
          } );
       }
 
-      function succesfulPayment ( amount )
+      function succesfulPayment ( amount , status )
       {
          obj = new Object();
          obj.action = "SUCCESFULPAYMENT";
          obj.amount = amount;
+         obj.status = status;
 
          $.post ( "classFunctions.php" , obj , function ( data ) {
             decode ( data );
