Payment Revisions Complete
Payments are now logged into their own table and a separate line item table stores the pay status of each registration.  Also added refund policy notes section on a delete confirmation page.

--- a/www/home.html
+++ b/www/home.html
@@ -155,11 +155,13 @@
          } );
       }
 
-      function drop ( reservationID )
+      function drop ( reservationID , confirm )
       {
          obj = new Object();
          obj.action = "DROP";
          obj.reservationID = reservationID;
+         if ( confirm == true ) obj.confirm = 1;
+         else obj.confirm = 0;
 
          event.stopPropagation();
 
