--- a/www/index.html
+++ b/www/index.html
@@ -96,7 +96,7 @@
           </div>
           <div class='col-md-offset-2 col-md-3 jumbotron'>
              <h3>New Users</h3>
-             <button id='newuser' class='btn btn-large btn-primary'><span class='glyphicon glyphicon-pencil'></span> Register</button>
+             <button id='newuser' class='btn btn-large btn-primary' onclick='window.location="register.html"'><span class='glyphicon glyphicon-pencil'></span> Register</button>
           </div>
        </div>
     </div>
