End of day commit 12-30-2016
Added the detail view to the admin interface
Need to reformat date fields and unfold sets

--- a/www/admin.html
+++ b/www/admin.html
@@ -54,6 +54,16 @@
 
          ajax ( obj );
       }
+
+      function classDetails ( classID )
+      {
+         obj = new Object();
+         obj.action = "CLASSDETAILS";
+         obj.classID = classID;
+
+         ajax ( obj );
+      }
+
    </script>
     <style>
        .flash {
