Registration Fix Commit

--- a/www/index.html
+++ b/www/index.html
@@ -1,109 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FWMSH Museum School Registration</title>
-
-    <!-- Bootstrap -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <script src='md5/js/md5.min.js'></script>
-    <script>
-      var detailID = null;
-
-      function decode ( json )
-      {
-         decodedJSON = JSON.parse ( json );
-         for ( i = 0 ; i < decodedJSON.length ; i ++ )
-         {
-            switch ( decodedJSON [ i ] [ 0 ] )
-            {
-               case "HTML": $ ( "#" + decodedJSON [ i ] [ 1 ] ).html ( decodedJSON [ i ] [ 2 ] );break;
-               case "SCRIPT": eval ( decodedJSON [ i ] [ 1 ] );break;
-            }
-         }
-      }
-
-      function login()
-      {
-         obj = new Object();
-         obj.action = "LOGIN";
-         obj.email = $ ( "#email" ).val();
-         obj.hash = md5 ( $ ( "#email" ).val() + md5 ( $ ( "#password" ).val() ) );
-
-         $.post ( "classFunctions.php" , obj , function ( data ) {
-            decode ( data );
-         } );
-      }
-    </script>
-
-    <style>
-       .row-striped :nth-child(even){
-         background-color: #dcdcdc;
-       }
-       .row-striped :nth-child(odd){
-         background-color: #aaaaaa;
-       }
-
-       .flash {
-         -moz-animation: flash 1s ease-out;
-         -moz-animation-iteration-count: infinite;
-
-         -webkit-animation: flash 1s ease-out;
-         -webkit-animation-iteration-count: infinite;
-
-         -ms-animation: flash 1s ease-out;
-         -ms-animation-iteration-count: infinite;
-       }
-
-       @-webkit-keyframes flash {
-           0% { background-color: none; }
-           50% { background-color: #fbf8b2; }
-           100% { background-color: none; }
-       }
-
-       @-moz-keyframes flash {
-           0% { background-color: none; }
-           50% { background-color: #fbf8b2; }
-           100% { background-color: none; }
-       }
-
-       @-ms-keyframes flash {
-           0% { background-color: none; }
-           50% { background-color: #fbf8b2; }
-           100% { background-color: none; }
-       }
-    </style>
-  </head>
-  <body> 
-    <h1 style='text-align:center;'>FWMSH Museum School Registration</h1>
-    <div class='container-fluid'>
-       <div class='row'>
-          <div class='col-md-offset-2 col-md-3 jumbotron'>
-             <h3>Returning Users</h3>
-             <div>E-Mail <input type='text' id='email' class='form-control'></div>
-             <div>Password <input type='password' id='password' class='form-control'></div>
-             <button id='newuser' class='btn btn-large btn-primary' onclick='login()'><span class='glyphicon glyphicon-flash'></span> Login</button>
-          </div>
-          <div class='col-md-offset-2 col-md-3 jumbotron'>
-             <h3>New Users</h3>
-             <button id='newuser' class='btn btn-large btn-primary' onclick='window.location="register.html"'><span class='glyphicon glyphicon-pencil'></span> Register</button>
-          </div>
-       </div>
-    </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-  </body>
+<html>
+   <head>
+      <script>
+         window.location = "gridFrame.html";
+      </script>
+   </head>
 </html>
-
