--- a/www/gridFrame.html
+++ b/www/gridFrame.html
@@ -32,7 +32,7 @@
     </script>
   </head>
   <body onload='reposition()'>
-    <div style='position:absolute;left:0px;top:0px;width:100%;height:100%;max-width:100%;'>
+    <div style='position:absolute;left:0px;top:0px;width:100%;height:100%;max-width:100%;overflow:hidden;'>
       <img id='header' src='frame.jpg' style='position:relative;width:100%;'>
       <iframe id='frame' src='grid.html' style='position:absolute;left:2.5%;top:16%;width:95%;border:0px white solid;bottom:5%;'></iframe>
       <table border=0 style='position:absolute;left:5%;width:90%;bottom:7px;text-align:center;font-family:Gotham;font-size:12pt;font-weight:bold;color:#FF00FF;'>
